syntax = "proto3";
package runecraftstudios.pastello.game.trivia.v1;

import "runecraftstudios/pastello/game/types/v1/types.proto";

option go_package = "github.com/runecraft-studios/pastello/internal/gen/runecraftstudios/pastello/game/trivia/v1;triviav1";

message SubmitAnswerCommand {
  runecraftstudios.pastello.game.types.v1.GameSessionId session_id = 1;
  runecraftstudios.pastello.game.types.v1.PlayerId      player_id  = 2;
  string answer = 3;
}

message RevealHintCommand {
  runecraftstudios.pastello.game.types.v1.GameSessionId session_id = 1;
}

message AnswerAcceptedEvent {
  runecraftstudios.pastello.game.types.v1.GameSessionId session_id = 1;
  runecraftstudios.pastello.game.types.v1.PlayerId      player_id  = 2;
  int32  delta_score = 3;
  int32  total_score = 4;
}

message HintRevealedEvent {
  runecraftstudios.pastello.game.types.v1.GameSessionId session_id = 1;
  string hint_text = 2;
}
